--- a/backend/templates/filtro.html
+++ b/backend/templates/filtro.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -17,8 +16,7 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
-        <a href='filtro' target = '_blank'>oe</a>
+        This is my bodi!
         
         <script src="" async defer></script>
     </body>
