Avance proyecto. Definición básica de rutas

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -18,7 +18,10 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <a href='filtro' target = '_blank'>oe</a>
+        <a href='filtro' >oe</a>
+        <a href='segundoGrafico'>vosniak</a>
+        <a href='tercerGrafico'>nooo</a>
+        <a href='cuartoGrafico'>nooo</a>
         
         <script src="" async defer></script>
     </body>
