--- a/backend/templates/filtro.html
+++ b/backend/templates/filtro.html
@@ -13,11 +13,12 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        This is my bodi!
-        
-        <script src="" async defer></script>
+        <div>
+            <canvas id="myChart"></canvas>
+        </div>
+          
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+        <script type = "module" src="../static/js/chart.js"></script>
+    
     </body>
 </html>
