--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -1,28 +1,18 @@
-<!doctype html>
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dynamic Chart</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+<body>
+    <h2>Dynamic Chart</h2>
+    
+    <form action="{{ url_for("getnum")}}" method="post">
+        <label for="number">Enter number:</label>
+        <input type="text" id="num" name="numero" placeholder="num">
+        <button type="submit">Send</button>
 
-        <a href='filtro' >oe</a>
-        <a href='segundoGrafico'>vosniak</a>
-        <a href='tercerGrafico'>nooo</a>
-        <a href='cuartoGrafico'>nooo</a>
-        
-        <script src="" async defer></script>
-    </body>
+</body>
 </html>
