--- a/backend/templates/filtro.html
+++ b/backend/templates/filtro.html
@@ -9,12 +9,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title></title>
         <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="">
     </head>
     <body>
         <div>
-            <canvas id="myChart"></canvas>
+            <canvas id="myChart" style="width: 600px; height: 400px;"></canvas>
         </div>
           
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
