--- a/backend/templates/dinachart.html
+++ b/backend/templates/dinachart.html
@@ -1,13 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Chart with Flask and Chart.js</title>
-    <!-- Include Chart.js library -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-</head>
-<body>
+{% extends "base.html"%}
+
+{%block content%}
+
     <h1>Dynamic Chart with Flask and Chart.js</h1>
     
     <!-- Form to select data -->
@@ -23,68 +17,6 @@
 
     <!-- Canvas to render the chart -->
     <canvas id="myChart" width="400" height="200"></canvas>
+    <script src = "../static/js/dinachart.js"></script>
 
-    <script>
-        function updateChart() {
-            var selectedData = document.getElementById('dataSelect').value;
-    
-            // Make an asynchronous request to the Flask route to get data
-            fetch(`/get_data/${selectedData}`)
-                .then(response => response.json())
-                .then(data => {
-                    // Update the chart with the received data
-                    console.log(data)
-                    console.log(data.data)
-                    console.log(data.index)
-                    
-                    // Destroy the existing chart
-            if (myChart) {
-                myChart.destroy();
-            }
-
-            // Create a new chart with the received data
-            var ctx = document.getElementById('myChart').getContext('2d');
-            myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: data.index,
-                    datasets: [{
-                        label: 'Selected Data',
-                        data: data.data,
-                        backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                        borderColor: 'rgba(75, 192, 192, 1)',
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    // Configure chart options as needed
-                }
-            });
-            myChart.update();
-                })
-                .catch(error => {
-                    console.error('Error fetching data:', error);
-                });
-        }
-        
-
-        var ctx = document.getElementById('myChart').getContext('2d');
-        var myChart = new Chart(ctx, {
-            type: 'bar',
-            data: {
-                labels: [],
-                datasets: [{
-                    label: 'Selected Data',
-                    data: [],
-                    backgroundColor: 'rgba(75, 192, 192, 0.2)',
-                    borderColor: 'rgba(75, 192, 192, 1)',
-                    borderWidth: 1
-                }]
-            },
-            options: {
-                // Configure chart options as needed
-            }
-        });
-    </script>
-</body>
-</html>
+{% endblock %}
