--- a/backend/templates/filtro.html
+++ b/backend/templates/filtro.html
@@ -1,18 +1,5 @@
-<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width">
-        <link rel="stylesheet" href="">
-    </head>
-    <body>
+{% extends "base.html" %}
+{% block content %}
         <div>
             <canvas id="myChart" style="width: 600px; height: 400px;"></canvas>
         </div>
@@ -24,5 +11,4 @@
         <script type = "module" src="../static/js/chart.js"></script>
         
         <a href='/'>Return</a>
-    </body>
-</html>
+{% endblock content %}
