--- a/backend/templates/chart.html
+++ b/backend/templates/chart.html
@@ -3,12 +3,11 @@
         <div>
             <canvas id="myChart" style="width: 600px; height: 400px;"></canvas>
         </div>
-          
-        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-        
+                  
         <div id = 'data' data-value = "{{data}}"></div>
         
         <script type = "module" src="../static/js/chart.js"></script>
         
-        <a href='/'>Return</a>
+        <a href='{{url_for("getnum")}}'>Return</a>
+
 {% endblock content %}
