--- a/backend/templates/dinachart.html
+++ b/backend/templates/dinachart.html
@@ -2,14 +2,14 @@
 
 {%block content%}
 
-    <h1>Dynamic Chart with Flask and Chart.js</h1>
+    <h1>Graficooo</h1>
     
     <!-- Form to select data -->
     <form id="dataForm">
         <label for="dataSelect">Select Data:</label>
         <select id="dataSelect" name="data">
-            <option value="data1">Data 1</option>
-            <option value="data2">Data 2</option>
+            <option value="data1">Top 10</option>
+            <option value="data2">Bottom 10</option>
             <!-- Add more options as needed -->
         </select>
         <button type="button" onclick="updateChart()">Update Chart</button>
