--- a/backend/templates/error.html
+++ b/backend/templates/error.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
+    <!--Imprime mensaje de error entregado -->
         <script > 
             alert("{{error}}");
             window.history.back();
         </script>
 {% endblock content %}
+
