--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -17,6 +17,8 @@
 
     <body> 
 
+        <!--# Bloque de contenidos de la página-->
+        
         {% block content%}
         {% endblock %}
 
