arreglado lo de las imagenes

--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -73,7 +73,7 @@ body {
 
 .header {
     height: 60vh !important;
-    background:url(/backend/img/wallpaper.gif) no-repeat center;
+    background:url(/paradogmas/backend/img/wallpaper.gif) no-repeat center;
     background-size: cover;
 
 }
