--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/https://cdnjs.cloudfire.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <link rel="stylesheet" href="/backend/static/style.css">
+    <link rel="stylesheet" href="/paradogmas/backend/static/styles.css">
 
     <title>Mi primera web con datos y cosas de musica</title>
 
@@ -98,7 +98,7 @@
             correo 2
         </p>
         <figure class="LogoEscuela">
-            <img src="/backend/img/logo_escuela_inf.png" height="100px" width="100%" alt="LogoEscuela">
+            <img src="/paradogmas/backend/img/logo_escuela_inf.png" height="100px" width="100%" alt="LogoEscuela">
 
         </figure>
     </section>
