--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/https://cdnjs.cloudfire.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="/paradogmas/backend/static/styles.css">
 
     <title>Mi primera web con datos y cosas de musica</title>
@@ -31,11 +30,7 @@
         </p>  
         
 
-        <div class="btn-home">
-            <a href="#" class="btn">Saber mas</a>
-            
-
-        </div>
+        
     </header>
 
     <section class="content sau">
@@ -45,26 +40,11 @@
 
         </p>
         
-        <div class="box-container">
-            <div class="box">
-                <i class="fab fa-angular"></i>
-                <h3>Lorem</h3>
-                <p>labore molestias consectetur veniam</p>
-        <div class="box-container">
-            <div class="box">
-                <i class="fab fa-apple"></i>
-                <h3>Lorem</h3>
-                <p>labore molestias consectetur veniam</p>
-        <div class="box-container">
-            <div class="box">
-                <i class="fab fa-andriod"></i>
-                <h3>Lorem</h3>
-                <p>labore molestias consectetur veniam</p>        
-            </div>
+        
         </div>
     </section> 
 
-    <section class="conten about">
+    <section class="content about">
         <h2 class="title">Nosotros</h2>
         <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla repellat eius quod doloremque molestiae saepe tempore enim est illo! Hic sapiente sit dolorum temporibus a libero maxime nisi iste quod.
@@ -75,9 +55,9 @@
 
     </section>
 
-    <section>
+    <section class="content price">
 
-        <article class="contain">
+        <article class="content">
             <h2 class="title">Precio</h2>
             <p>
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, maiores beatae architecto, aliquam corporis sit reiciendis iure dicta quisquam quam a amet modi deleniti, officiis cumque perspiciatis praesentium ullam aspernatur.
