--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -40,8 +40,8 @@
 
         </p>
         
+        <a href="#" class="btn"> Saber mas</a>
         
-        </div>
     </section> 
 
     <section class="content about">
