--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -83,7 +83,7 @@ body {
     font-size: 60px;
     font-weight: 600;
     text-transform: uppercase;
-    color: #bbb;
+    color: #fff;
 
 }
 
@@ -98,11 +98,12 @@ p {
 .btn {
     display: inline-block;
     margin-top: 15px;
+    margin-bottom: 10px;
     padding: 10px 40px;
-    border: 2px solid #9c27b0;
+    border: 2px solid #27b092;
     color: #fff;
     text-decoration: none;
-    background: #9c27b0;
+    background: #27b092;
 
 }
 
