--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -186,7 +186,22 @@ p {
 
 .contact {
     padding: 20px;
-    background: #101010;
+    background: #1f1d1d;
     padding-bottom: 0;
 
 }
+
+#graphContainer {
+    width: 100%;
+    max-width: 600px; /* Puedes ajustar esto según tus necesidades */
+    margin: auto;
+    height: auto; /* Esto podría ser una altura fija o relativa también */
+  }
+  
+  /* Media queries para ajustar la visualización en dispositivos de diferentes tamaños */
+  @media (max-width: 768px) {
+    #graphContainer {
+      max-width: 100%;
+    }
+  }
+  
