--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -73,7 +73,7 @@ body {
 
 .header {
     height: 60vh !important;
-    background:url(/paradogmas/backend/static/img/wallpaper.gif) no-repeat center;
+    background:url("../static/img/wallpaper.gif") no-repeat center;
     background-size: cover;
 
 }
@@ -177,7 +177,7 @@ p {
 }
 
 .price {
-    background:url(/paradogmas/backend/static/img/wallpaper.gif) no-repeat center;
+    background:url("..static/img/wallpaper.gif") no-repeat center;
     background-attachment: fixed;
     background-size: cover;
     text-align: center;
