--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/paradogmas/backend/static/styles.css">
+    <link rel="stylesheet" href="../static/styles.css">
 
     <title>Mi primera web con datos y cosas de musica</title>
 
@@ -78,7 +78,7 @@
             correo 2
         </p>
         <figure class="LogoEscuela">
-            <img src="/paradogmas/backend/static/img/logo_escuela_inf.png" height="100px" width="100%" alt="LogoEscuela">
+            <img src="../static/img/logo_escuela_inf.png" height="100px" width="100%" alt="LogoEscuela">
 
         </figure>
     </section>
