--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -16,13 +16,13 @@
     </head>
     <body>
 
-        <h1>FAQ</h1>
+        <h1>Proyecto !!</h1>
 
 <div class="accordion">
 
   <div class="accordion-item">
     <div class="accordion-item-header">
-      What is Web Development?
+      Descripción de los datos
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
@@ -94,27 +94,60 @@
     </div>
   </div>
 
-
+  <!-- Tercer Item -->
   <div class="accordion-item">
     <div class="accordion-item-header">
       Gráficos de dispersion para datos
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
+
+        
         
         <form id="dataForm">
-            <label for="dataSelect3">Seleccione sus datos :</label>
-            <select id="dataSelect3" name="data">
-                <option value="data1">Top 10</option>
-                <option value="data2">Bottom 10</option>
+            <label for="dataSelect3_1">Seleccione sus datos :</label>
+            <select id="dataSelect3_1" name="data">
+
+                <option value="danceability">danceability</option>
+                <option value="energy">energy</option>
+                <option value="loudness">loudness</option>
+                <option value="speechiness">speechiness</option>
+                <option value="acousticness">acousticness</option>
+                <option value="instrumentalness">instrumentalness</option>
+                <option value="acousticness">acousticness</option>
+                <option value="instrumentalness">instrumentalness</option>
+                <option value="tempo">tempo</option>
+                <option value="duration_ms">duration_ms</option>
+                <option value="key">key</option>
+                <option value="mode">mode</option>
                 <!-- Add more options as needed -->
             </select>
-            <button type="button" onclick="updateChart3()">Actualizar</button>
+            <button type="button" id='data2_button'">Actualizar</button>
         </form>
+
+        <form id="dataForm">
+          <label for="dataSelect3_2">Seleccione sus datos :</label>
+          <select id="dataSelect3_2" name="data">
+
+              <option value="danceability">danceability</option>
+              <option value="energy">energy</option>
+              <option value="loudness">loudness</option>
+              <option value="speechiness">speechiness</option>
+              <option value="acousticness">acousticness</option>
+              <option value="instrumentalness">instrumentalness</option>
+              <option value="acousticness">acousticness</option>
+              <option value="instrumentalness">instrumentalness</option>
+              <option value="tempo">tempo</option>
+              <option value="duration_ms">duration_ms</option>
+              <option value="key">key</option>
+              <option value="mode">mode</option>
+              <!-- Add more options as needed -->
+          </select>
+          <button type="button" id='data1_button'>Actualizar</button>
+      </form>
     
         <!-- Generamos un canvas para almacenar el gráfico -->
         <canvas id="chartum" width="400" height="200"></canvas>
-
         <!-- Código JS para el gráfico -->
         <script src = "../static/js/tree.js"></script>
         
@@ -125,7 +158,7 @@
         <script src="../static/js/collapsible.js" async defer></script>
     
     
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
