--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -64,3 +64,12 @@ h1 {
     font-size: 14px;
   }
 }
+
+.nosotros{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+
+}
