--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -26,7 +26,7 @@
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        hjasiha
+        Los datos que usamos para estos graficos vienen de 
       </div>
     </div>
   </div>
@@ -62,7 +62,7 @@
 
   <div class="accordion-item">
     <div class="accordion-item-header">
-        Gráfico de torta para géneros musicales según ano del albúm
+        Gráfico de torta para géneros musicales según año del albúm
     </div>
 
     <div class="accordion-item-body">
@@ -164,4 +164,17 @@
 
     
     </body>
+
+    <section class="nosotros">
+      <h2 class="titile">Contacto</h2>
+      <p>
+        coreo 1
+      </p>
+      <p>
+        correo 2
+      </p>
+      <figure>
+        <img src="/paradogmas/backend/static/img/logo_escuela_inf.png" height="100px" width="100%" alt="logo_escuela_inf">
+      </figure>
+    </section>
 </html>
