--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -175,6 +175,8 @@
       </p>
       <figure>
         <img src="/paradogmas/backend/static/img/logo_escuela_inf.png" height="100px" width="100%" alt="logo_escuela_inf">
+        <img src="/paradogmas/backend/static/img/logo spotify.png" height="100px" width="100%" alt="logo_escuela_inf">
+
       </figure>
     </section>
 </html>
