--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -70,6 +70,12 @@ h1 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
+  margin-bottom: 40px;
 
+}
+
+.fotos{
+  justify-content: center;
+  align-items: center;
+  display: flex;
 }
