--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -26,7 +26,12 @@
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        Los datos que usamos para estos graficos vienen de 
+        Los datos que usamos para estos graficos vienen de kaggle, estos datos corresponden a datos de spotify donde tenemos algunas de las principales caracteristicas de las canciones
+        como pueden ser el nombre, el album donde pertenece, entre otros datos de ese estilo.
+
+            Nosotros lo que hicimos fue crear 3 graficos donde tomamos estas caractetisticas y las plasmamos para responder las siguientes dudas, ¿Cuales son los artistas con mas canciones?, ¿Cuales son los generos musicales que hay en cada año?, ¿Como estan distribuidos los datos
+            
+            ?
       </div>
     </div>
   </div>
@@ -168,14 +173,17 @@
     <section class="nosotros">
       <h2 class="titile">Contacto</h2>
       <p>
-        coreo 1
+        alexandra.mendoza.v@mail.pucv.cl
       </p>
       <p>
-        correo 2
+        pablo.torreblanca.l@mail.pucv.cl
       </p>
+      
+    </section>
+    <section class="fotos">
       <figure>
         <img src="/paradogmas/backend/static/img/logo_escuela_inf.png" height="100px" width="100%" alt="logo_escuela_inf">
-        <img src="/paradogmas/backend/static/img/logo spotify.png" height="100px" width="100%" alt="logo_escuela_inf">
+        <img src="/paradogmas/backend/static/img/LogoTransparenteSpotify.png" height="100px" width="100%" alt="logo_escuela_inf">
 
       </figure>
     </section>
