--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -43,7 +43,7 @@
             <label for="dataSelect">Seleccione sus datos :</label>
             <select id="dataSelect" name="data">
                 <option value="Top Artistas">Top 10</option>
-                <option value="Últimos artistas">Bottom 10</option>
+                <option value="Últimos Artistas">Bottom 10</option>
                 <!-- Add more options as needed -->
             </select>
             <button type="button" onclick="updateChart()">Actualizar</button>
