--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -15,8 +15,13 @@
 
     </head>
     <body>
+      <div class="barra">
+        
+        <h1>Proyecto</h1>
+        
+      </div> 
 
-        <h1>Proyecto !!</h1>
+        
 
 <div class="accordion">
 
