--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -3,13 +3,33 @@
 * {
   margin: 0;
   padding: 0;
+  border: 0;
+  font-size: 100%;
+  vertical-align: baseline;
   box-sizing: border-box;
 }
+
+
+
+
 body {
   font-family: 'Montserrat', sans-serif;
   background-color: #34495e;
   color: #fff;
+  background: url(../static/img/wallpaper.gif);
+  
 }
+
+.barra {
+  background-color: #111;
+  color: #fff;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  
+
+}
+
 h1 {
   text-align: center;
   margin: 2rem 0;
@@ -21,6 +41,7 @@ h1 {
   max-width: 1000px;
   margin: 2rem auto;
 }
+
 .accordion-item {
   background-color: #fff;
   color: #111;
@@ -71,11 +92,27 @@ h1 {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
+  background-color: #111;
+  color: #fff;
+  margin: 1rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  padding: 2rem;
 
 }
 
 .fotos{
+  padding: 2rem;
+  margin: 1rem;
   justify-content: center;
   align-items: center;
   display: flex;
+  background-color: #111;
+  color: #fff;
+  margin: 3rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
 }
+
+
+
