--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -16,17 +16,17 @@ body {
   font-family: 'Montserrat', sans-serif;
   background-color: #34495e;
   color: #fff;
-  background: url(../static/img/wallpaper.gif);
+  background: url(../static/img/wallpaperGIF.gif);
   
 }
 
 .barra {
-  background-color: #111;
+  background: linear-gradient(to right, #423030, #421d1d);  color: #fff;
   color: #fff;
   margin: 1rem 0;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
-  
+
 
 }
 
@@ -92,7 +92,7 @@ h1 {
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  background-color: #111;
+  background: linear-gradient(to right, #423030, #421d1d);  color: #fff;
   color: #fff;
   margin: 1rem 0;
   border-radius: 0.5rem;
@@ -107,8 +107,7 @@ h1 {
   justify-content: center;
   align-items: center;
   display: flex;
-  background-color: #111;
-  color: #fff;
+  background: linear-gradient(to right, #423030, #421d1d);  color: #fff;
   margin: 3rem 0;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
