--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -111,7 +111,13 @@ h1 {
   margin: 3rem 0;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  
 }
 
+@media screen and (max-width: 768px) {
+  .fotos img {
+    height: 60px; 
+  }
+}
 
 
