--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -182,8 +182,8 @@
     </section>
     <section class="fotos">
       <figure>
-        <img src="/paradogmas/backend/static/img/logo_escuela_inf.png" height="100px" width="100%" alt="logo_escuela_inf">
-        <img src="/paradogmas/backend/static/img/LogoTransparenteSpotify.png" height="100px" width="100%" alt="logo_escuela_inf">
+        <img src="../static/img/logo_escuela_inf.png" height="100px" width="100%" alt="logo_escuela_inf">
+        <img src="../static/img/LogoTransparenteSpotify.png" height="100px" width="100%" alt="logo_escuela_inf">
 
       </figure>
     </section>
