--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -112,10 +112,10 @@
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
 
-        
+      <div class = 'form-container'>
         
         <form id="dataForm">
-            <label for="dataSelect3_1">Seleccione sus datos :</label>
+            <label for="dataSelect3_1">Seleccione eje X :</label>
             <select id="dataSelect3_1" name="data">
 
                 <option value="danceability">danceability</option>
@@ -136,7 +136,7 @@
         </form>
 
         <form id="dataForm">
-          <label for="dataSelect3_2">Seleccione sus datos :</label>
+          <label for="dataSelect3_2">Seleccione eje Y :</label>
           <select id="dataSelect3_2" name="data">
 
               <option value="danceability">danceability</option>
@@ -155,7 +155,7 @@
           </select>
           <button type="button" id='data1_button'>Actualizar</button>
       </form>
-    
+    </div>
         <!-- Generamos un canvas para almacenar el gráfico -->
         <canvas id="chartum" width="400" height="200"></canvas>
         <!-- Código JS para el gráfico -->
@@ -176,7 +176,7 @@
     </body>
 
     <section class="nosotros">
-      <h2 class="titile">Contacto</h2>
+      <h2 class="titile">Contacto</h2><br></br>
       <p>
         alexandra.mendoza.v@mail.pucv.cl
       </p>
