--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -34,7 +34,8 @@
         Los datos que usamos para estos graficos vienen de kaggle, estos datos corresponden a datos de spotify donde tenemos algunas de las principales caracteristicas de las canciones
         como pueden ser el nombre, el album donde pertenece, entre otros datos de ese estilo.
         <br>
-        <img src="../static/img/todoro-miyazaki.gif" height="150px" width="40%" alt="logo_escuela_inf">
+
+        <img src="../static/img/totoro gifto.gif" class="responsive-image" height="150px" width="40%" alt="totoro">
 
         <br>
         Nosotros lo que hicimos fue crear 3 graficos donde tomamos estas caractetisticas y las plasmamos para responder las siguientes dudas, ¿Cuales son los artistas con mas canciones?, ¿Cuales son los generos musicales que hay en cada año?, ¿Como estan distribuidos los datos?
