--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -31,18 +31,17 @@
     </div>
     <div class="accordion-item-body">
       <div class="accordion-item-body-content">
-        Los datos que usamos para estos graficos vienen de kaggle, estos datos corresponden a datos de spotify donde tenemos algunas de las principales caracteristicas de las canciones
-        como pueden ser el nombre, el album donde pertenece, entre otros datos de ese estilo.
-        <br>
+        Los datos que usamos para estos gráficos vienen de Kaggle. Estos datos corresponden a datos de Spotify donde tenemos algunas de las principales características de las canciones,
+      como pueden ser el nombre, el álbum al que pertenecen, entre otros datos de ese estilo.
+      <br>
 
         <img src="../static/img/totoro gifto.gif" class="responsive-image" height="150px" width="40%" alt="totoro">
 
         <br>
-        Nosotros lo que hicimos fue crear 3 graficos donde tomamos estas caractetisticas y las plasmamos para responder las siguientes dudas, ¿Cuales son los artistas con mas canciones?, ¿Cuales son los generos musicales que hay en cada año?, ¿Como estan distribuidos los datos?
+        Nosotros lo que hicimos fue crear 3 gráficos donde tomamos estas características y las plasmamos para responder a las siguientes preguntas: ¿Cuáles son los artistas con más canciones?, ¿Cuáles son los géneros musicales que hay en cada año?, ¿Cómo están distribuidos los datos?
         <br>
-        Para ello creamos estos graficos con el fin de poder darle respuesta a dichas preguntas.
-
-      </div>
+        Para ello, creamos estos gráficos con el fin de poder dar respuesta a dichas preguntas.
+    </div>
     </div>
   </div>
 
