--- a/backend/templates/face.html
+++ b/backend/templates/face.html
@@ -52,7 +52,7 @@
         <!-- Formulario para elegir los datos -->
         <form id="dataForm">
             <label for="dataSelect">Seleccione sus datos :</label>
-            <select id="dataSelect" name="data">
+            <select id="dataSelect" name="data" class="custom-dropdown">
                 <option value="Top Artistas">Top 10</option>
                 <option value="Últimos Artistas">Bottom 10</option>
                 <!-- Add more options as needed -->
@@ -82,7 +82,7 @@
         
         <form id="dataForm">
             <label for="dataSelect2">Seleccione sus datos :</label>
-            <select id="dataSelect2" name="data">
+            <select id="dataSelect2" name="data" class="custom-dropdown">
                 <option value="1957 to 1980">1957 to 1980</option>
                 <option value="1981 to 1990">1981 to 1990</option>
                 <option value="1991 to 2004">1991 to 2004</option>
@@ -117,7 +117,7 @@
         
         <form id="dataForm">
             <label for="dataSelect3_1">Seleccione eje X :</label>
-            <select id="dataSelect3_1" name="data">
+            <select id="dataSelect3_1" name="data" class="custom-dropdown">
 
                 <option value="danceability">danceability</option>
                 <option value="energy">energy</option>
@@ -138,7 +138,7 @@
 
         <form id="dataForm">
           <label for="dataSelect3_2">Seleccione eje Y :</label>
-          <select id="dataSelect3_2" name="data">
+          <select id="dataSelect3_2" name="data" class="custom-dropdown">
 
               <option value="danceability">danceability</option>
               <option value="energy">energy</option>
