--- a/backend/static/second_style.css
+++ b/backend/static/second_style.css
@@ -36,6 +36,7 @@ h1 {
   text-align: center;
   margin: 2rem 0;
   font-size: 2.5rem;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .accordion {
@@ -50,6 +51,7 @@ h1 {
   margin: 1rem 0;
   border-radius: 0.5rem;
   box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   
 }
 .accordion-item-header {
